Fix responsive layout issues in Resume.css and add color detail enhancements

--- a/client/src/PortfolioContainer/Home/Header/Header.css
+++ b/client/src/PortfolioContainer/Home/Header/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     height: 140px;
-    color: black;
+    color: rgba(0, 0, 0, 0.629);
 }
 
 .header-parent {
@@ -82,7 +82,7 @@
         height: 100vh;
         width: 100%;
         justify-content: space-around;
-        background-color: rgba(1, 1, 1, 0.858);
+        background-color: rgba(1, 1, 1, 0.702);
         z-index: 1000;
         opacity: 0.8;
         transition: all 0.8s ease-out;
@@ -98,6 +98,7 @@
 
     .header-option {
         color: var(--white);
+        font-size: 20px;
     }
 
     .header-hamburger-bars {
